# fuji3

./: .gitattributes  INCAR  POSCAR  README.md  outcar.csv  outcar_1.csv  pyproject.toml  test.csv
mdkit/: __init__.py  main.py  util.py
mdkit/aimd/: __init__.py  outcar.py
mdkit/outcar/: outcar.py
test/: .gitattributes  test.py
test/03_fe_mp150/333_md_T500/: 2unix.sh  CONTCAR  EIGENVAL  Fe_mp150x333.vasp  INCAR  KPOINTS  OSZICAR  OUTCAR  PCDAT  POSCAR  REPORT  XDATCAR  slurm-1458749.out  sub.sh
